# TO-TO-Automation

./: .gitignore  README.md  main.py  main.spec  pyproject.toml
UI/: loading.py  main.py  utils.py
src/: combination.py  exception.py  login.py  play.py  utils.py
